@@ -41,8 +41,11 @@ sub select_value {
 		} elsif ($value =~ m/^\?/ms) {
 			# same
 		} elsif ($value =~ m/^(.*?)(@\w\w)$/ms) {
-			$value = "'$1'$2";
+			my ($main_value, $lang) = ($1, $2);
+			$main_value =~ s/'/\\'/msg;
+			$value = "'$main_value'$lang";
 		} else {
+			$value =~ s/'/\\'/msg;
 			$value = "'$value'";
 		}
 
